--- a/Introduction.tex
+++ b/Introduction.tex
@@ -3,24 +3,24 @@
 \chapter*{Introduction}
 
 
-\NI Neutrinos are elementary particles of the Standard Model belonging to the lepton group and representing an important part of the matter in the Universe. Their existence have been postulated by Pauli, in 1930, to explain the conservation of the energy, momentum and angular momentum in the beta decay. Since their detection in 1956, by Cowan and Reines, many experiments have been realized to study their properties. These searches demonstrated that it exists three neutrino flavours associated to the charged lepton with whom they are produced by weak interaction : electron, muon and tau. These experiments also shown that the neutrinos can change to a flavour to an other one during their propagation by a mechanism called neutrino oscillation. As the neutrinos interact only via the weak interaction, their detection and their study are very challenging and, despite the huge efforts of the neutrino community, many of their properties are still unknown.
+\NI Neutrinos are elementary particles of the Standard Model belonging to the lepton group and representing an important part of the matter in the Universe. Their existence has been postulated by Pauli, in 1930, to explain the conservation of energy, momentum and angular momentum in the beta decay. Since their detection by Cowan and Reines in 1956, many experiments studied their properties. These searches demonstrated the existence of three neutrino flavours associated to the charged lepton which they are produced by weak interaction : electron, muon and tau. These experiments also showed that neutrinos can change flavour during their propagation by a mechanism called neutrino oscillation. As the neutrinos interact only via the weak interaction, their detection and their study are very challenging and, despite the huge efforts of the neutrino community, many of their properties are still yet to be discovered.
 
 
 \bigskip
 
 
-\NI Contrary to the other particles of the Standard Model, the mass of the neutrino have not yet been measured and for a long time physists thought they were massless. Thanks to the discovery of their oscillation, which is possible only for massive neutrinos, we know that neutrinos have a mass but the origin by which they acquire it is still unknown. It could be like the other particles via the Higgs mechanism but it also exists other theories such as models involving Majorana neutrinos. The nature of the neutrinos is still unknown. As they are electrically neutral, they could be their own anti-particle (Majorana neutrinos) or their anti-particles could differ (Dirac neutrino) from them. Since it have been proven that the neutrinoless double beta decay is possible only for Majorana neutrinos, many experiments have been designed to search for this hypothetical decay. Its observation would prove the Majorana nature of the neutrino and could also give us the mass scale of the neutrino. In the scenario neutrinos are Marojana particles, it also could explain the asymetry between the matter and the anti-matter in the Universe.
+\NI Contrary to the other particles of the Standard Model, the neutrino mass has not yet been measured and for a long time physicists thought they were massless. Thanks to the discovery of their oscillation, which is possible only for massive neutrinos, we know now that neutrinos have a mass but the mechanism by which they acquire it is still unknown. It could be via the Higgs mechanism as for other particles, but other theories exist such as models involving Majorana neutrinos. As they are electrically neutral, the neutrinos could be their own anti-particle (Majorana neutrinos) or their anti-particles could differ (Dirac neutrinos) from them. Since it has been proven that the neutrinoless double beta decay is possible only for Majorana neutrinos, many experiments have been designed to search for this hypothetical decay. Its observation would not only prove the Majorana nature of the neutrinos but would also give us information about the mass scale of the neutrinos. This Majorana neutrino scenario could also bring some clues to the explanation of the asymetry between matter and antimatter observed in the Universe.
 
 
 \bigskip
 
 
-\NI It is in this context that NEMO experiments have been designed. The NEMO detectors provide a unique approach in the double beta field combining a calorimetric and a tracking measurement of double beta events emitted by a separated isotopic source. This feature allows to search for double beta decays among several isotopes with good background discrimination. Furthermore, the NEMO experiments are able to measure all kinematical parameters of the event(s) which might allow to determine the process leading to neutrinoless double beta decay.
+\NI It is in this context that the NEMO experiments which are the basis of this thesis work, have been designed. The NEMO detectors provide a unique approach in the double beta field combining a calorimetric and a tracking measurement of double beta events emitted by a separated isotopic source. This feature allows for searching for double beta decays among several isotopes with good background discrimination. Furthermore, the NEMO experiments are able to measure all kinematical parameters of the event(s) which might allow determining the process leading to neutrinoless double beta decay signatures.
 
 
 \bigskip
 
-\NI Chapter~1 presentes the description of the neutrino in the theoritical framework of the Standard Model. The phenomena of neutrino oscillation will also be discussed followed by an introduction to theory related to massive neutrino. \NI The process of double beta decay will be presented in Chapter~2. This chapter also discusses the different technology to study this decay and give a status of the different searches. Chapter 3 provides a detailled description of the NEMO detector which have been used for the search for double beta decay of $^{\text{116}}$Cd into the excited states of $^{\text{116}}$Sn. Its successor, SuperNEMO, which use the same unique technique will also be described. Chapter~4 presents a study realised to optimise the SuperNEMO sensitivity according the design of its source foil design. The problem of the radon in the beta decay experiment will be discussed in Chapter~5. This chapter introduces the algorithm which have been impleted to reconstruct and identify the alpha particles with the SuperNEMO software. Then it explains how the reconstruction of the alpha particle and the construction of the 1e1$\alpha$ channel allow the measurement of the radon contamination. Finally, Chapter~6 presentes the search for two neutrinos and neutrinoless double beta decay of $^{\text{116}}$Cd via the excited states of $^{\text{116}}$Sn realized with the NEMO-3 data.
+\NI Three main contributions have been adressed in this work : the optimisation of the SuperNEMO source, the $\alpha$-finder algorithm and an analysis of the NEMO-3 data. Chapter~1 presents the description of the neutrino in the theoretical framework of the Standard Model. The phenomena of neutrino oscillation will also be discussed followed by an introduction to theory related to massive neutrino. \NI The process of double beta decay will be presented in Chapter~2 as well as the different technologies to study this decay and a status of the different searches. Chapter 3 gives a detailled description of the NEMO-3 detector which has been used for the analysis developed in this thesis which is the search for double beta decay of $^{\text{116}}$Cd into the excited states of $^{\text{116}}$Sn. In a second part, its successor SuperNEMO, which is currently under construction and based on the same technique, is also described to introduce the detector optimisation and the particle identification study performed for this thesis. In this framework, Chapter~4 presents the study realized to optimise the SuperNEMO sensitivity and the design of its source foil. The radon problematic in the beta decay experiment will be discussed in Chapter~5. This chapter introduces the algorithm which has been developed and implemented to reconstruct and identify the alpha particles within SuperNEMO software. This alpha particle reconstruction and the identification of the 1e1$\alpha$ channel will be presented to discuss the measurement of the radon contamination. Finally, Chapter~6 presents the original search for two neutrinos and neutrinoless double beta decay of $^{\text{116}}$Cd via the excited states of $^{\text{116}}$Sn realized with the NEMO-3 data.
 
 
 
