--- a/thesis.tex
+++ b/thesis.tex
@@ -146,9 +146,10 @@ Search for $2\nu\beta\beta$ and $0\nu\beta\beta$ decays of $^{\text{116}}$Cd int
 
 
 \Jury  {%\UGTRole{civilité, prénom et nom}{titre}{affiliation}
-  \UGTPresidente  {Mme, Edwige TOURNEFIER}{Directrice de recherche, LAPP - Annecy}         {}
+  \UGTPresidente    {Mme, Edwige TOURNEFIER}{Directrice de recherche, LAPP - Annecy}         {}
   \UGTRapporteur    {M, Claudio GIGANTI}    {Chargé de recherche, LPNHE - Paris}             {}
   \UGTRapporteur    {M, Ruben SAAKYAN}      {Professor, UCL - Londres}                       {}
+  \UGTExaminateur   {M, Damir Buskulic}     {Professeur, LAPP - Annecy}                      {}
   \UGTExaminatrice  {Mme, Jaime DAWSON}     {Chargée de recherche, APC - Paris}              {}
   \UGTExaminateur   {M, Laurent SIMARD}     {Ma\^itre de conf, Univ. Paris-Sud / LAL - Orsay}{}
   %\UGTDirecteur     {M, le Directeur}{DR}{Labo1}
