--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -4,5 +4,47 @@
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
 
+\NI The search for $\beta\beta$ decays is a very active research topic in neutrino physics. The observation of the 2$\nu\beta\beta$ decay to the ground state or the excited states and the measurement of the high half-lives provide useful information on the complex nuclear structure. Moreover the observation of the hypothetical 0$\nu\beta\beta$ decay could prove the Majorana nature of the neutrino and also demonstrate that the lepton number is not conserved.  
+
+
+\bigskip
+
+
+\NI Located at LSM, the NEMO-3 detector investigated $\beta\beta$ decays among 7 different isotopes during 7 years. Its unique technique referred to as tracker-calorimeter allows to search for $\beta\beta$ decays with an excellent background rejection. 
+
+
+\bigskip
+
+
+\NI In this thesis, the NEMO-3 data of the cadmium sector have been analysed to perform the original searches of 2$\nu\beta\beta$ and 0$\nu\beta\beta$ decays of \Cd~ via the excited state of \Sn. With 5.25~effective years of data taking with 410~g of \Cd~ no signal has been found and the first limits obtained with the NEMO-3 data for these proccesses have been set to :  
+
+
+\vspace{0.8cm}
+
+
+\begin{tabular}{cc}
+$ \text{T}_{\text{1/2}}^{\text{2}\nu} (^{\text{116}} \text{Cd}, \text{0} \rightarrow \text{2}^{+}) > \text{4.2} \times \text{10}^{\text{20}}~\text{y}$ at 90\% C.L. & $ \text{T}_{\text{1/2}}^{\text{0}\nu} (^{\text{116}} \text{Cd}, \text{0} \rightarrow \text{2}^{+}) > \text{7.7} \times \text{10}^{\text{21}}~\text{y}$ at 90\% C.L. \\[0.4cm]
+
+$ \text{T}_{\text{1/2}}^{\text{2}\nu} (^{\text{116}} \text{Cd}, \text{0} \rightarrow \text{0}^{+}) > \text{2.1} \times \text{10}^{\text{19}}~\text{y}$ at 90\% C.L. & $ \text{T}_{\text{1/2}}^{\text{0}\nu} (^{\text{116}} \text{Cd}, \text{0} \rightarrow \text{0}^{+}) > \text{3.3} \times \text{10}^{\text{21}}~\text{y}$ at 90\% C.L.
+\end{tabular}
+
+
+\vspace{0.8cm}
+
+
+\NI Today, the NEMO-3 detector has been disassembled and the construction of the first module of its successor, SuperNEMO, is ongoing at LSM. This first module, called demonstrator, is based on the same NEMO-3 technique and one of its main goals is to demonstrate that the search for 0$\nu\beta\beta$ decays can be background-free during 2.5~y of data taking with 7~kg of $^{\text{82}}$Se. To reach this aim, many efforts have been realised to improve the energy resolution of the calorimeter and the radiopurity of the detector and its source foil. In that context, a new design of source foil, using more radiopure material have been proposed. The optimisation of the SuperNEMO performances with respect to the design of its source foil has been realised in this thesis work. These studies allow to validate that the new design has slightly better performance than the previous one and half of the demonstrator source foils has been made with this new design. Their installation into the detector is planned during autumn 2017.
+
+
+\bigskip
+
+
+\NI Always in order to reduce the level of background, the collaboration made important efforts to limit the background induced by the radon such as an improvement of the detector tightness or the installation of an anti-radon system. Despite all these efforts, some residual contaminations of radon are expected inside the tracker. A work performed in this thesis consisted of the implementation and the developement of an algorithm dedicated to search for alpha particles. By exploiting this algorithm, the 1e1$\alpha$ events are efficiently reconstructed allowing a direct measurement of the radon contamination. The results obtained in this thesis have shown that the radon contamination coming from the tracker can be mesured daily with a 8\% of precision (in the hypothesis the gas is not flushed). 
+
+
+\bigskip
+
+
+\NI Depending on the results that will be obtained with the demonstrator module, other SuperNEMO like modules could be built in the future. In the hypothesis where 100~kg of $^{\text{82}}$Se are distributed into 20 different modules, a sensitivity of 10$^{\text{26}}$~y could be reached after 5~years of data taking corresponding to an effective neutrino mass of $\langle \text{m}_{\beta\beta} \rangle$ < (0.04 - 0.1)~eV probing the inverted mass ordering region.
+
 
 \end{document}
