--- a/biblio.bib
+++ b/biblio.bib
@@ -767,6 +767,19 @@ author = "N. Kudomi and others",
   url = {https://link.aps.org/doi/10.1103/PhysRevD.22.2227}
 }
 
+@article{SeeSawMechanism,
+      author         = "Schechter, J. and Valle, J. W. F.",
+      title          = "{Neutrino Decay and Spontaneous Violation of Lepton
+                        Number}",
+      journal        = "Phys. Rev.",
+      volume         = "D25",
+      year           = "1982",
+      pages          = "774",
+      doi            = "10.1103/PhysRevD.25.774",
+      reportNumber   = "SU-4217-203, COO-3533-203",
+      SLACcitation   = "%%CITATION = PHRVA,D25,774;%%"
+}
+
 @article{DBDmeff,
       author         = "Rodejohann, Werner",
       title          = "{Neutrinoless double beta decay and neutrino physics}",
@@ -2075,3 +2088,405 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
       primaryClass   = "hep-ex",
       SLACcitation   = "%%CITATION = ARXIV:1705.08847;%%"
 }
+
+@article{SAGE,
+      author         = "Abdurashitov, J. N. and others",
+      title          = "{Measurement of the solar neutrino capture rate with
+                        gallium metal. III: Results for the 2002--2007 data-taking
+                        period}",
+      collaboration  = "SAGE",
+      journal        = "Phys. Rev.",
+      volume         = "C80",
+      year           = "2009",
+      pages          = "015807",
+      doi            = "10.1103/PhysRevC.80.015807",
+      eprint         = "0901.2200",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:0901.2200;%%"
+}
+
+
+@article{AtmosphericAnomaly,
+      author         = "Acker, Andy and Learned, John G. and Pakvasa, Sandip and
+                        Weiler, Thomas J.",
+      title          = "{A Single solution to the atmospheric and solar neutrino
+                        anomalies}",
+      journal        = "Phys. Lett.",
+      volume         = "B298",
+      year           = "1993",
+      pages          = "149-153",
+      doi            = "10.1016/0370-2693(93)91721-X",
+      reportNumber   = "UH-511-746-92, VAND-TH-92-6",
+      SLACcitation   = "%%CITATION = PHLTA,B298,149;%%"
+}
+
+
+@article{PontecorvoOscillationProposal,
+      author         = "Pontecorvo, B.",
+      title          = "{Mesonium and anti-mesonium}",
+      journal        = "Sov. Phys. JETP",
+      volume         = "6",
+      year           = "1957",
+      pages          = "429",
+      note           = "[Zh. Eksp. Teor. Fiz.33,549(1957)]",
+      SLACcitation   = "%%CITATION = SPHJA,6,429;%%"
+}
+
+@article{MakiNakagawaSakata,
+author = {Maki, Ziro and Nakagawa, Masami and Sakata, Shoichi},
+title = {Remarks on the Unified Model of Elementary Particles},
+journal = {Progress of Theoretical Physics},
+volume = {28},
+number = {5},
+pages = {870-880},
+year = {1962},
+doi = {10.1143/PTP.28.870},
+URL = { + http://dx.doi.org/10.1143/PTP.28.870},
+eprint = {/oup/backfile/content_public/journal/ptp/28/5/10.1143/ptp.28.870/2/28-5-870.pdf}
+}
+
+@article{DiracNeutrino,
+      author         = "Pontecorvo, B.",
+      title          = "{Neutrino Experiments and the Problem of Conservation of
+                        Leptonic Charge}",
+      journal        = "Sov. Phys. JETP",
+      volume         = "26",
+      year           = "1968",
+      pages          = "984-988",
+      note           = "[Zh. Eksp. Teor. Fiz.53,1717(1967)]",
+      SLACcitation   = "%%CITATION = SPHJA,26,984;%%"
+}
+
+
+@article{Majorana2008,
+	abstract = {Si dimostra la possibilit\`{a} di pervenire a una piena simmetrizzazione formale della teoria quantistica dell'elettrone e del positrone facendo uso di un nuovo processo di quantizzazione. Il significato delle equazioni diDiracne risulta alquanto modificato e non vi \`{e} pi\`{u} luogo a parlare di stati di energia negativa; n\`{e} a presumere per ogni altro tipo di particelle, partieolarmente neutre, l'esistenza di "< antiparticelle "> corrispondenti ai "< vuoti "> cut energia negativa.},
+	author = {Majorana, Ettore},
+	day = {21},
+	doi = {10.1007/BF02961314},
+	issn = {1827-6121},
+	journal = {Il Nuovo Cimento (1924-1942)},
+	month = {Sep},
+	number = {4},
+	pages = {171},
+	title = {{Teoria simmetrica dell'elettrone e del positrone}},
+	url = {https://doi.org/10.1007/BF02961314},
+	volume = {14},
+	year = {2008}
+}
+
+
+@article{NeutrinoFluxSolar,
+      author         = "Bahcall, John N. and Serenelli, Aldo M. and Basu,
+                        Sarbani",
+      title          = "{New solar opacities, abundances, helioseismology, and
+                        neutrino fluxes}",
+      journal        = "Astrophys. J.",
+      volume         = "621",
+      year           = "2005",
+      pages          = "L85-L88",
+      doi            = "10.1086/428929",
+      eprint         = "astro-ph/0412440",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0412440;%%"
+}
+
+@article{Kamiokande2,
+  title = {Observation of $^{8}\mathrm{B}$ solar neutrinos in the Kamiokande-II detector},
+  author = "Hirata,  K. S. and others",
+  journal = {Phys. Rev. Lett.},
+  volume = {63},
+  issue = {1},
+  pages = {16--19},
+  numpages = {0},
+  year = {1989},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.63.16},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.63.16}
+}
+
+@article{MSW,
+      author         = "Mikheev, S. P. and Smirnov, A. {\relax Yu}.",
+      title          = "{Resonance Amplification of Oscillations in Matter and
+                        Spectroscopy of Solar Neutrinos}",
+      journal        = "Sov. J. Nucl. Phys.",
+      volume         = "42",
+      year           = "1985",
+      pages          = "913-917",
+      note           = "[Yad. Fiz.42,1441(1985)]",
+      SLACcitation   = "%%CITATION = SJNCA,42,913;%%"
+}
+
+@article{AtmosNeutrinoFlux,
+	risfield_0_db = {PMC},
+	risfield_1_u1 = {pjab-86-303[PII]},
+	risfield_2_an = {PMC3417797},
+	risfield_3_u1 = {20431258[pmid]},
+	abstract = {Neutrino oscillation was discovered through studies of neutrinos produced by cosmic-ray interactions in the atmosphere. These neutrinos are called atmospheric neutrinos. They are produced as decay products in hadronic showers resulting from collisions of cosmic rays with nuclei in the atmosphere. Electron-neutrinos and muon-neutrinos are produced mainly by the decay chain of charged pions to muons to electrons. Atmospheric neutrino experiments observed zenith-angle and energy dependent deficit of muon-neutrino events. Neutrino oscillations between muon-neutrinos and tau-neutrinos explain these data well. Neutrino oscillations imply that neutrinos have small but non-zero masses. The small neutrino masses have profound implications to our understanding of elementary particle physics and the Universe. This article discusses the experimental discovery of neutrino oscillations.},
+	author = {{Kajita Takaaki}},
+	doi = {10.2183/pjab.86.303},
+	issn = {0386-2208 1349-2896},
+	journal = {Proceedings of the Japan Academy. Series B, Physical and Biological Sciences},
+	location = {Tokyo, Japan},
+	month = jan,
+	number = {4},
+	pages = {303--321},
+	publisher = {The Japan Academy},
+	title = {{Atmospheric neutrinos and discovery of neutrino oscillations}},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3417797/},
+	volume = {86},
+	year = {2010}
+}
+
+
+@article{AtmosNeutrinoAnomaly,
+      author         = "Haines, T. J. and others",
+      title          = "{Calculation of Atmospheric Neutrino Induced Backgrounds
+                        in a Nucleon Decay Search}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "57",
+      year           = "1986",
+      pages          = "1986-1989",
+      doi            = "10.1103/PhysRevLett.57.1986",
+      SLACcitation   = "%%CITATION = PRLTA,57,1986;%%"
+}
+
+@article{EvidenceAtmosNeutrinoOsc,
+      author         = "Ashie, Y. and others",
+      title          = "{Evidence for an oscillatory signature in atmospheric
+                        neutrino oscillation}",
+      collaboration  = "Super-Kamiokande",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "93",
+      year           = "2004",
+      pages          = "101801",
+      doi            = "10.1103/PhysRevLett.93.101801",
+      eprint         = "hep-ex/0404034",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0404034;%%"
+}
+
+@article{K2K,
+      author         = "Ahn, S. H. and others",
+      title          = "{Detection of accelerator produced neutrinos at a
+                        distance of 250-km}",
+      collaboration  = "K2K",
+      journal        = "Phys. Lett.",
+      volume         = "B511",
+      year           = "2001",
+      pages          = "178-184",
+      doi            = "10.1016/S0370-2693(01)00647-5",
+      eprint         = "hep-ex/0103001",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "KEK-PREPRINT-2000-149, K2K-PREPRINT-2001-001,
+                        SBHEP-2001-01",
+      SLACcitation   = "%%CITATION = HEP-EX/0103001;%%"
+}
+
+@article{MINOS,
+      author         = "Michael, D. G. and others",
+      title          = "{Observation of muon neutrino disappearance with the
+                        MINOS detectors and the NuMI neutrino beam}",
+      collaboration  = "MINOS",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "97",
+      year           = "2006",
+      pages          = "191801",
+      doi            = "10.1103/PhysRevLett.97.191801",
+      eprint         = "hep-ex/0607088",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-06-243, BNL-76806-2006-JA",
+      SLACcitation   = "%%CITATION = HEP-EX/0607088;%%"
+}
+
+@article{PINGU,
+      author         = "Aartsen, M. G. and others",
+      title          = "{PINGU: A Vision for Neutrino and Particle Physics at the
+                        South Pole}",
+      collaboration  = "IceCube",
+      journal        = "J. Phys.",
+      volume         = "G44",
+      year           = "2017",
+      number         = "5",
+      pages          = "054006",
+      doi            = "10.1088/1361-6471/44/5/054006",
+      eprint         = "1607.02671",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1607.02671;%%"
+}
+
+@article{KM3NeT,
+	abstract = {ORCA (Oscillations Research with Cosmics in the Abyss) is the low-energy branch of KM3NeT, the underwater Cherenkov neutrino detector in the Mediterranean. Its primary goal is to resolve the long-standing unsolved question of the neutrino mass ordering by measuring matter oscillation effects in atmospheric neutrinos. To be deployed at the French KM3NeT site, ORCA{\rq}s multi-PMT optical modules will exploit the excellent optical properties of deep seawater to reconstruct cascade and track events with a few GeV of energy. This contribution reviews the methods and technology, and discusses the current expected performances.},
+	author = {Kouchner, Antoine},
+	journal = {Journal of Physics: Conference Series},
+	number = {6},
+	pages = {062030},
+	title = {{KM3NeT - ORCA: measuring the neutrino mass ordering in the Mediterranean}},
+	url = {http://stacks.iop.org/1742-6596/718/i=6/a=062030},
+	volume = {718},
+	year = {2016}
+}
+
+
+@article{PredictionReactorAntiNeutrino1,
+      author         = "Mueller, Th. A. and others",
+      title          = "{Improved Predictions of Reactor Antineutrino Spectra}",
+      journal        = "Phys. Rev.",
+      volume         = "C83",
+      year           = "2011",
+      pages          = "054615",
+      doi            = "10.1103/PhysRevC.83.054615",
+      eprint         = "1101.2663",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "IRFU-10-280",
+      SLACcitation   = "%%CITATION = ARXIV:1101.2663;%%"
+}
+
+@article{PredictionReactorAntiNeutrino2,
+      author         = "Huber, Patrick",
+      title          = "{On the determination of anti-neutrino spectra from
+                        nuclear reactors}",
+      journal        = "Phys. Rev.",
+      volume         = "C84",
+      year           = "2011",
+      pages          = "024617",
+      doi            = "10.1103/PhysRevC.85.029901, 10.1103/PhysRevC.84.024617",
+      note           = "[Erratum: Phys. Rev.C85,029901(2012)]",
+      eprint         = "1106.0687",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1106.0687;%%"
+}
+
+@article{DeficitReactor7,
+	abstract = {Recently, new reactor antineutrino spectra have been provided for 235 U, 239 Pu, 241 Pu, and 238 U, increasing the mean flux by about 3 percent. To a good approximation, this reevaluation applies to all reactor neutrino experiments. The synthesis of published experiments at reactor-detector distances below 100 m leads to a ratio of observed event rate to predicted rate of 0.976 ± 0.024. With our new flux evaluation, this ratio shifts to 0.943 ± 0.023, leading to a deviation from unity at 98.6\% C.L. which we call the reactor antineutrino anomaly. The compatibility of our results with the existence of a fourth non-standard neutrino state driving neutrino oscillations at short distances is discussed. The combined analysis of reactor data, gallium solar neutrino calibration experiments, and MiniBooNE- ν data disfavors the no-oscillation hypothesis at 99.8\% C.L. The oscillation parameters are such that |Δ m 2 new | > 1.5 eV 2 (95\%) and sin 2 (2 θ new ) = 0.14 ± 0.08 (95\%).},
+	author = {Mention, G},
+	journal = {Journal of Physics: Conference Series},
+	number = {1},
+	pages = {012025},
+	title = {{The reactor antineutrino anomaly}},
+	url = {http://stacks.iop.org/1742-6596/408/i=1/a=012025},
+	volume = {408},
+	year = {2013}
+}
+
+@article{ReactorAnomaly,
+      author         = "Mention, G. and Fechner, M. and Lasserre, Th. and
+                        Mueller, Th. A. and Lhuillier, D. and Cribier, M. and
+                        Letourneau, A.",
+      title          = "{The Reactor Antineutrino Anomaly}",
+      journal        = "Phys. Rev.",
+      volume         = "D83",
+      year           = "2011",
+      pages          = "073006",
+      doi            = "10.1103/PhysRevD.83.073006",
+      eprint         = "1101.2755",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1101.2755;%%"
+}
+
+@article{LightSterileNeutrino,
+      author         = "Gariazzo, S. and Giunti, C. and Laveder, M. and Li, Y. F.
+                        and Zavanin, E. M.",
+      title          = "{Light sterile neutrinos}",
+      journal        = "J. Phys.",
+      volume         = "G43",
+      year           = "2016",
+      pages          = "033001",
+      doi            = "10.1088/0954-3899/43/3/033001",
+      eprint         = "1507.08204",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1507.08204;%%"
+}
+
+@article{LSND,
+      author         = "Aguilar-Arevalo, A. and others",
+      title          = "{Evidence for neutrino oscillations from the observation
+                        of anti-neutrino(electron) appearance in a
+                        anti-neutrino(muon) beam}",
+      collaboration  = "LSND",
+      journal        = "Phys. Rev.",
+      volume         = "D64",
+      year           = "2001",
+      pages          = "112007",
+      doi            = "10.1103/PhysRevD.64.112007",
+      eprint         = "hep-ex/0104049",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0104049;%%"
+}
+
+@inproceedings{STERO,
+      author         = "Hélaine, Victor",
+      title          = "{Sterile neutrino search at the ILL nuclear reactor: the
+                        STEREO experiment}",
+      booktitle      = "{Prospects in Neutrino Physics (NuPhys2015) London, UK,
+                        December 16-18, 2015}",
+      collaboration  = "STEREO",
+      url            = "https://inspirehep.net/record/1454080/files/arXiv:1604.08877.pdf",
+      year           = "2016",
+      eprint         = "1604.08877",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "NUPHYS2015-HELAINE",
+      SLACcitation   = "%%CITATION = ARXIV:1604.08877;%%"
+}
+
+@article{Solid,
+      author         = "Ryder, Nick",
+      title          = "{First results of the deployment of a SoLid detector
+                        module at the SCK-CEN BR2 reactor}",
+      booktitle      = "{Proceedings,  2015 European Physical Society Conference
+                        on High Energy Physics (EPS-HEP 2015): Vienna, Austria,
+                        July 22-29, 2015}",
+      collaboration  = "SoLid",
+      journal        = "PoS",
+      volume         = "EPS-HEP2015",
+      year           = "2015",
+      pages          = "071",
+      eprint         = "1510.07835",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1510.07835;%%"
+}
+
+@article{SOX,
+      author         = "Bellini, G. and others",
+      title          = "{SOX: Short distance neutrino Oscillations with
+                        BoreXino}",
+      collaboration  = "Borexino",
+      journal        = "JHEP",
+      volume         = "08",
+      year           = "2013",
+      pages          = "038",
+      doi            = "10.1007/JHEP08(2013)038",
+      eprint         = "1304.7721",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1304.7721;%%"
+}
+
+
+@article{WeylSpinorNeutrino,
+  title = {Parity Nonconservation and a Two-Component Theory of the Neutrino},
+  author = {Lee, T. D. and Yang, C. N.},
+  journal = {Phys. Rev.},
+  volume = {105},
+  issue = {5},
+  pages = {1671--1675},
+  numpages = {0},
+  year = {1957},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.105.1671},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.105.1671}
+}
+
